5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2171/executions/1602_2895.log
== TEST (2019-03-20 18:24:03) 
-- CODE:
var=float(input("quantidade"))
var=float(input("valor unitario"))
var=float (input("frente"))

print(total)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:24:03) 
-- CODE:
var=float(input("quantidade"))
var=float(input("valor unitario"))
var=float (input("frente"))

print(total)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:24:03) 
-- CODE:
var=float(input("quantidade"))
var=float(input("valor unitario"))
var=float (input("frente"))

print(total)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:24:03) 
-- CODE:
var=float(input("quantidade"))
var=float(input("valor unitario"))
var=float (input("frente"))

print(total)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:24:03) 
-- CODE:
var=float(input("quantidade"))
var=float(input("valor unitario"))
var=float (input("frente"))

print(total)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:24:03) 
-- CODE:
var=float(input("quantidade"))
var=float(input("valor unitario"))
var=float (input("frente"))

print(total)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:30:33) 
-- CODE:
var1=float(input("quantidade"))
var2=float(input("valor unitario"))
var3=float (input("frente"))

total=(var1+var2+var3)
print(total)
		


-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:31:05) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frente?"))

total=(var1+var2+var3)
print(total)
		


-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:31:20) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frente?"))

total=(var1+var2+var3)
print(total)
		


-- EXECUTION TIME:
0.173622
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:32:12) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frente?"))

total=(10+40+50)
print(total)
		


-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:32:29) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frente?"))

total=(10+40+50)
print(total)
		


-- EXECUTION TIME:
0.152755
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
100
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
100
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:34:24) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frente?"))

total(float(var1+var2+var3))
print(total)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total(float(var1+var2+var3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:34:39) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frente?"))

total(float(var1+var2+var3))
print(total)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total(float(var1+var2+var3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:35:10) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frente?"))

total(var1+var2+var3)
print(total)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total(var1+var2+var3)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:35:34) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frente?"))

total(var1+var2+var3)


print(total)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total(var1+var2+var3)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:42:06) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frente?"))
var1=10
var2=40
var3=50
print(total)


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:42:24) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frente?"))
var1=10
var2=40
var3=50
print(total)


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:43:10) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frente?"))
var1=10
var2=40
var3=50
print(float(total))


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(float(total))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:45:44) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frente?"))


total=float(var1+var2+var3+frete)
print(total)


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total=float(var1+var2+var3+frete)
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:50:11) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frente?"))


total=float(int(var1+var2+var3+frete))
print(total)


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total=float(int(var1+var2+var3+frete))
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:54:47) 
-- CODE:
var1=float(input("quantidade?"))
var2=float(input("valor unitario?"))
var3=float (input("frete?"))


total=int(var1+var2+var3+frete)

print(total)

		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total=int(var1+var2+var3+frete)
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:05:36) 
-- CODE:
qtd=float(input("quantidade de jogos?"))
valor=float(input("valor unitário?"))
ft=float(input("frete?"))

total=float(qtd*valor + frete)
print(total)

		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=float(qtd*valor + frete)
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:06:15) 
-- CODE:
qtd=float(input("quantidade de jogos?"))
vr=float(input("valor unitário?"))
ft=float(input("frete?"))

total=float(qtd*vr + frete)
print(total)

		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=float(qtd*vr + frete)
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:06:24) 
-- CODE:
qtd=float(input("quantidade de jogos?"))
vr=float(input("valor unitário?"))
ft=float(input("frete?"))

total=float(qtd*vr + frete)
print(total)

		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=float(qtd*vr + frete)
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:07:21) 
-- CODE:
qtd=float(input("quantidade?"))
vr=float(input("valor unitário?"))
ft=float(input("frete?"))

total=float(qtd*vr + ft)
print(total)

		


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:09:10) 
-- CODE:
a=float(input("quantidade:"))
b=float(input("valor unitário:"))
c=float(input("frete:"))

total=float(a*b + c)
print(total)

		


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:15) 
-- CODE:
a=int(input("quantidade:"))
b=float(input("valor unitário:"))
c=float(input("frete:"))

total=float(a*b + c)
print(total)

		


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:11:47) 
-- CODE:
a=int(input("quantidade:"))
b=float(input("valor unitário:"))
c=float(input("frete:"))
total=float(a*b + c)
print(total)

		


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:12:28) 
-- CODE:
a=int(input("quantidade:"))
b=float(input("valor unitário:"))
c=float(input("frete:"))
total=float(a*b+c)
print(total)

		


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:12:36) 
-- CODE:
a=int(input("quantidade:"))
b=float(input("valor unitário:"))
c=float(input("frete:"))
total=float(a*b+c)
print(total)

		


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:18:48) 
-- CODE:
A=int(float("quantidade de jogos:"))
B=float(input("valor unitátio:"))
C=float(input("o valor do frete:"))
total=float(A*B+C)
print(total)


		


	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    A=int(float("quantidade de jogos:"))
ValueError: could not convert string to float: 'quantidade de jogos:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:19:04) 
-- CODE:
A=int(float("quantidade de jogos:"))
B=float(input("valor unitátio:"))
C=float(input("valor do frete:"))
total=float(A*B+C)
print(total)


		


	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    A=int(float("quantidade de jogos:"))
ValueError: could not convert string to float: 'quantidade de jogos:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:19:22) 
-- CODE:
A=int(float("quantidade de jogos: "))
B=float(input("valor unitátio: "))
C=float(input("valor do frete: "))
total=float(A*B+C)
print(total)


		


	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    A=int(float("quantidade de jogos: "))
ValueError: could not convert string to float: 'quantidade de jogos: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:19:30) 
-- CODE:
A= int(float("quantidade de jogos: "))
B= float(input("valor unitátio: "))
C= float(input("valor do frete: "))
total=float(A*B+C)
print(total)


		


	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    A= int(float("quantidade de jogos: "))
ValueError: could not convert string to float: 'quantidade de jogos: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:19:51) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= float(input("valor unitátio: "))
C= float(input("valor do frete: "))
total=float(A*B+C)
print(total)


		


	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:20:31) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= float(input("valor unitátio: "))
C= float(input("valor do frete: "))
total=float(B*A+C)
print(total)


		


	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:21:37) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= float(input("valor unitátio: "))
C= float(input("valor do frete: "))
total=float(B*A+C)
print(total)


		


	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:22:00) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= float(input("valor unitátio: "))
C= float(input("valor do frete: "))
total=float(B*A+C)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:22:33) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= float(input("valor unitario: "))
C= float(input("valor do frete: "))
total=float(B*A+C)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:22:46) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= float(input("valor unitario: "))
C= float(input("valor do frete: "))
total=float(B*A+C)
print(total)
-- EXECUTION TIME:
0.205949
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
